src/test/deca/syntax/valid/ifthenelse.deca
// Description:
//          Structure ifthenelse correcte
//
// Résultat:
//Succès
//
{
    boolean a = true ;
    boolean b = false ;
    if (b) {
                println("b is true") ; 
    }

    else {println("a is true");}

}