src/test/deca/syntax/invalid/if_inutile.deca
//  Description :
//            Structure ifthenelse avec un if sans bloc d'instructions
//
// Résultat:
//mismatched input 'else'
//
{
    if(bool)
    else if (notbool) {}
    else{}
}